Revision history for Dist-Zilla-Plugin-Doppelgaenger

{{$NEXT}}

0.005     2013-09-23 12:59:16 America/New_York

    [FIXED]

    - Now munges module paths (Old/Name.pm to New/Name.pm)

0.004     2013-09-23 10:15:12 America/New_York

    [FIXED]

    - Fixed bug when stripping $VERSION inside a block

0.003     2013-09-23 08:15:03 America/New_York

    - Change default mirror to www.cpan.org

0.002     2010-12-17 12:31:36 EST5EDT

    - Added 'strip_version' option

    - Fixed up line spacing of additions to Changes files

0.001     2010-12-17 08:50:22 EST5EDT

    - First draft

# vim: ts=4 sts=4 sw=4 et: