@@ -1,5 +1,5 @@
 requires "Archive::Extract" => "0";
-requires "Dist::Zilla::File::InMemory" => "0";
+requires "Dist::Zilla::File::InMemory" => "5";
 requires "Dist::Zilla::Role::AfterRelease" => "0";
 requires "Dist::Zilla::Role::FileGatherer" => "0";
 requires "Dist::Zilla::Role::FileMunger" => "0";
@@ -22,22 +22,31 @@ requires "warnings" => "0";
 
 on 'test' => sub {
   requires "ExtUtils::MakeMaker" => "0";
-  requires "File::Spec" => "0";
   requires "File::Spec::Functions" => "0";
-  requires "File::Temp" => "0";
-  requires "IO::Handle" => "0";
-  requires "IPC::Open3" => "0";
   requires "List::Util" => "0";
   requires "Test::More" => "0";
+  requires "version" => "0";
+};
+
+on 'test' => sub {
+  recommends "CPAN::Meta" => "0";
+  recommends "CPAN::Meta::Requirements" => "2.120900";
 };
 
 on 'configure' => sub {
-  requires "ExtUtils::MakeMaker" => "6.30";
+  requires "ExtUtils::MakeMaker" => "6.17";
 };
 
 on 'develop' => sub {
+  requires "Dist::Zilla" => "5.012";
+  requires "Dist::Zilla::PluginBundle::DAGOLDEN" => "0.060";
+  requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
   requires "Pod::Coverage::TrustPod" => "0";
   requires "Test::CPAN::Meta" => "0";
+  requires "Test::More" => "0";
   requires "Test::Pod" => "1.41";
   requires "Test::Pod::Coverage" => "1.08";
 };
