@@ -2,6 +2,13 @@ Revision history for Dist-Zilla-Plugin-Doppelgaenger
 
 {{$NEXT}}
 
+    [FIXED]
+
+    - Requires Dist::Zilla 5 and is updated to respect new encodings API
+
+    - Munging moved from gather phase to regular munging phase to be able
+      to act after encodings are set
+
 0.005     2013-09-23 12:59:16 America/New_York
 
     [FIXED]
